--- a/views/register.jade
+++ b/views/register.jade
@@ -2,9 +2,10 @@ extends layout
 
 block content
   .container
-    h1 Register Page
-    p.lead Say something worthwhile here.
+    h1= title
+    p An Oasis of Learning and Literacy
     br
+    p.lead Register Here
     form(role='form', action="/register",method="post", style='max-width: 300px;')
       .form-group
           input.form-control(type='text', name="username", placeholder='Enter Username')
