--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,18 @@ a {
   border:1px solid #CCC;
   background:rgba(80,120,255,0.05);
 }
+#addBook input[type=text] {
+  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0.1em;
+  margin: 0.5em;
+  width: 400px;
+  
+}
+
+#addBook input[type="text"]:focus,
+#addBook input[type="text"].focus {
+  box-shadow: inset 1px 1px 2px 0 #c9c9c9;
+}
 
 fieldset {
   border:0;
