--- a/views/home.jade
+++ b/views/home.jade
@@ -58,4 +58,15 @@ block content
                         button#btnAddBook Add Book
         // /ADD BOOK
 
+        // SEARCH BOOK
+        br
+        h2 Search Book
+        #searchBook
+                    fieldset
+                        input#inputBookName(type='text', placeholder='Name of Book')
+                        br
+                        button#btnSearchBook Search Book
+                        br
+        // /SEARCH BOOK
+
     // /WRAPPER
