--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,6 +64,14 @@ a {
   box-shadow: inset 1px 1px 2px 0 #c9c9c9;
 }
 
+#searchBook input[type=text] {
+  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0.1em;
+  margin: 0.5em;
+  width: 400px;
+  
+}
+
 fieldset {
   border:0;
   padding:0; margin:0;
