--- a/views/login.jade
+++ b/views/login.jade
@@ -6,15 +6,15 @@ block content
     p An Oasis of Learning and Literacy
     br
     p.lead Sign in to continue
-    form(role='form', action="/login",method="post", style='max-width: 300px;')
+    form(role='form', action="/login",method="POST", style='max-width: 300px;')
       .form-group
-          input.form-control(type='text', name="username", placeholder='Enter Username')
+          label(for= 'username') Username
+          input.form-control(type='text', name="username", placeholder='Enter Username', autofocus)
       .form-group
-        input.form-control(type='password', name="password", placeholder='Password')
-      button.btn.btn-default(type='submit') Submit
-      &nbsp;
-      a(href='/')
-        button.btn.btn-primary(type="button") Cancel
+          label(for= 'password') Password
+          input.form-control(type='password', name="password", placeholder='Password')
+      button.btn.btn-primary(type='submit') Login
+      a.btn.btn-link(href='/forgot') Forgot Password?
     br 
     if (message.length > 0)
       p= message
