--- a/views/register.jade
+++ b/views/register.jade
@@ -8,10 +8,18 @@ block content
     p.lead Register Here
     form(role='form', action="/register",method="post", style='max-width: 300px;')
       .form-group
-          input.form-control(type='text', name="username", placeholder='Enter Username')
+        label(for='username') Username
+        input.form-control(type='text', name="username", placeholder='Enter Username', autofocus)
       .form-group
-        input.form-control(type='password', name="password", placeholder='Password')
-      button.btn.btn-default(type='submit') Submit
+        label(for='email') Email
+        input.form-control(type='text', name="email", placeholder='Email')
+      .form-group
+        label(for='password') Password
+        input.form-control(type='password', name="password", placeholder='Password') 
+      .form-group
+        label(for='confirm') Confirm Password
+        input.form-control(type='password', name="confirm", placeholder='Confirm Password') 
+      button.btn.btn-primary(type='submit') Register
       &nbsp;
       a(href='/')
         button.btn.btn-primary(type="button") Cancel
