--- a/views/home.jade
+++ b/views/home.jade
@@ -4,69 +4,76 @@ extends layout
 block content
     h1= title
     p An Oasis of Learning and Literacy
+    if(user)
+        // Wrapper
+        #wrapper
 
-    // Wrapper
-    #wrapper
+            // BOOK INFO
+            #bookInfo
+                        h2 Book Info
+                        p
+                            strong Title:
+                            |  <span id='bookInfoName'></span>
+                            br
+                            // strong Age:
+                            //|  <span id='userInfoAge'></span>
+                            //br
+                            //strong Gender:
+                            //|  <span id='userInfoGender'></span>
+                            //br
+                            strong Location:
+                            |  <span id='bookUserLocation'></span>
+                            
+                        a(href='/logout') Logout
+            // /BOOK INFO
 
-        // BOOK INFO
-        #bookInfo
-                    h2 Book Info
-                    p
-                        strong Title:
-                        |  <span id='bookInfoName'></span>
-                        br
-                        // strong Age:
-                        //|  <span id='userInfoAge'></span>
-                        //br
-                        //strong Gender:
-                        //|  <span id='userInfoGender'></span>
-                        //br
-                        strong Location:
-                        |  <span id='bookUserLocation'></span>
-                        
-                    a(href='/logout') Logout
-        // /BOOK INFO
+            // BOOK LIST
+            h2 Book List
+            #bookList
+                table
+                    thead
+                        th Book Name
+                        th Email
+                        th Delete?
+                        th Update
+                    tbody
+            // /BOOK LIST
 
-        // BOOK LIST
-        h2 Book List
-        #bookList
-            table
-                thead
-                    th Book Name
-                    th Email
-                    th Delete?
-                    th Update
-                tbody
-        // /BOOK LIST
+            // ADD BOOK
+            h2 Add Book
+            #addBook
+                        fieldset
+                            input#inputBookName(type='text', placeholder='Name of Book')
+                            br
+                            input#inputBookOwnerEmail(type='text', placeholder='Book Owner Email')
+                            br
+                            input#inputBookOwnerFullname(type='text', placeholder='Full Name')
+                            br
+                            input#inputBookOwnerAge(type='text', placeholder='Age')
+                            br
+                            input#inputBookOwnerLocation(type='text', placeholder='Location')
+                            br
+                            input#inputBookOwnerGender(type='text', placeholder='Gender')
+                            br
+                            button#btnAddBook Add Book
+            // /ADD BOOK
 
-        // ADD BOOK
-        h2 Add Book
-        #addBook
-                    fieldset
-                        input#inputBookName(type='text', placeholder='Name of Book')
-                        br
-                        input#inputBookOwnerEmail(type='text', placeholder='Book Owner Email')
-                        br
-                        input#inputBookOwnerFullname(type='text', placeholder='Full Name')
-                        br
-                        input#inputBookOwnerAge(type='text', placeholder='Age')
-                        br
-                        input#inputBookOwnerLocation(type='text', placeholder='Location')
-                        br
-                        input#inputBookOwnerGender(type='text', placeholder='Gender')
-                        br
-                        button#btnAddBook Add Book
-        // /ADD BOOK
+            // SEARCH BOOK
+            br
+            h2 Search Book
+            #searchBook
+                        fieldset
+                            input#inputBookName(type='text', placeholder='Name of Book')
+                            br
+                            button#btnSearchBook Search Book
+                            br
+            // /SEARCH BOOK
 
-        // SEARCH BOOK
+        // /WRAPPER
+    if(!user)
         br
-        h2 Search Book
-        #searchBook
-                    fieldset
-                        input#inputBookName(type='text', placeholder='Name of Book')
-                        br
-                        button#btnSearchBook Search Book
-                        br
-        // /SEARCH BOOK
-
-    // /WRAPPER
+        p.lead You are not authorized to view this page. 
+        br
+        a(href='/login') Login
+        br
+        a(href='/register') Register
