--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,6 @@ block content
 		a(href='/register') Register
 	if(user)
 		p You are currently logged in as #{user.username}
-		a(href='/home') Go to Home Page
+		a(href='/homepage') Go to Home Page
 		br
 		a(href='/logout') Logout
