--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,8 @@ body
                         a(href='/') Home
                     if user
                         li
+                            a(href='/search') Search
+                        li
                             a(href='/logout') Logout
                     else
                         li
