--- a/views/home.jade
+++ b/views/home.jade
@@ -10,21 +10,21 @@ block content
 
             // BOOK INFO
             #bookInfo
-                        h2 Book Info
-                        p
-                            strong Title:
-                            |  <span id='bookInfoName'></span>
-                            br
-                            // strong Age:
-                            //|  <span id='userInfoAge'></span>
-                            //br
-                            //strong Gender:
-                            //|  <span id='userInfoGender'></span>
-                            //br
-                            strong Location:
-                            |  <span id='bookUserLocation'></span>
-                            
-                        a(href='/logout') Logout
+                h2 Book Info
+                p
+                    strong Title:
+                        <span id='bookInfoName'></span>
+                    br
+                    // strong Age:
+                    //|  <span id='userInfoAge'></span>
+                    //br
+                    //strong Gender:
+                    //|  <span id='userInfoGender'></span>
+                    //br
+                    strong Location:
+                        <span id='bookUserLocation'></span>
+                       
+                a(href='/logout') Logout
             // /BOOK INFO
 
             // BOOK LIST
@@ -42,31 +42,31 @@ block content
             // ADD BOOK
             h2 Add Book
             #addBook
-                        fieldset
-                            input#inputBookName(type='text', placeholder='Name of Book')
-                            br
-                            input#inputBookOwnerEmail(type='text', placeholder='Book Owner Email')
-                            br
-                            input#inputBookOwnerFullname(type='text', placeholder='Full Name')
-                            br
-                            input#inputBookOwnerAge(type='text', placeholder='Age')
-                            br
-                            input#inputBookOwnerLocation(type='text', placeholder='Location')
-                            br
-                            input#inputBookOwnerGender(type='text', placeholder='Gender')
-                            br
-                            button#btnAddBook Add Book
+                fieldset
+                    input#inputBookName(type='text', placeholder='Name of Book')
+                    br
+                    input#inputBookOwnerEmail(type='text', placeholder='Book Owner Email')
+                    br
+                    input#inputBookOwnerFullname(type='text', placeholder='Full Name')
+                    br
+                    input#inputBookOwnerAge(type='text', placeholder='Age')
+                    br
+                    input#inputBookOwnerLocation(type='text', placeholder='Location')
+                    br
+                    input#inputBookOwnerGender(type='text', placeholder='Gender')
+                    br
+                    button#btnAddBook Add Book
             // /ADD BOOK
 
             // SEARCH BOOK
             br
             h2 Search Book
             #searchBook
-                        fieldset
-                            input#inputBookName(type='text', placeholder='Name of Book')
-                            br
-                            button#btnSearchBook Search Book
-                            br
+                fieldset
+                    input#inputBookName(type='text', placeholder='Name of Book')
+                    br
+                    button#btnSearchBook Search Book
+                    br
             // /SEARCH BOOK
 
         // /WRAPPER
