--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,7 +15,7 @@ body
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
-                a.navbar-brand(href='/') Project name
+                a.navbar-brand(href='/') Team-Book-Tu
             .collapse.navbar-collapse
                 ul.nav.navbar-nav
                     li.active
