--- a/views/login.jade
+++ b/views/login.jade
@@ -5,7 +5,7 @@ block content
     h1= title
     p An Oasis of Learning and Literacy
     br
-    p.lead Sign in to continue
+    p.lead Login to continue
     form(role='form', action="/login",method="POST", style='max-width: 300px;')
       .form-group
           label(for= 'username') Username
