--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,43 +1,54 @@
 doctype html
 html
     head
+        meta(charset='utf-8')
+        meta(http-equiv='X-UA-Compatible', content='IE=edge')
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')
+        meta(name='csrf-token', content=_csrf)
         title= title
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel='stylesheet', href='/stylesheets/main.css')
         link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
         script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
         script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
-body
-    .navbar.navbar-inverse.navbar-static-top(role='navigation')
+    body
+        .navbar.navbar-inverse.navbar-static-top(role='navigation')
+            .container
+                .navbar-header
+                    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='/') Team-Book-Tu
+                .collapse.navbar-collapse
+                    ul.nav.navbar-nav
+                        li.active
+                            a(href='/') Home
+                        if user
+                            li
+                                a(href='/search') Search
+                            li
+                                a(href='/logout') Logout
+                        else
+                            li
+                                a(href='/login') Login
+                            li
+                                a(href='/register') Register    
         .container
-            .navbar-header
-                button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-                    span.sr-only Toggle navigation
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
-                a.navbar-brand(href='/') Team-Book-Tu
-            .collapse.navbar-collapse
-                ul.nav.navbar-nav
-                    li.active
-                        a(href='/') Home
-                    if user
-                        li
-                            a(href='/search') Search
-                        li
-                            a(href='/logout') Logout
-                    else
-                        li
-                            a(href='/login') Login
-                        li
-                            a(href='/register') Register    
-    .container
-        if messages.error
-            .alert.alert-danger
-                div= messages.error
-        if messages.info
-            .alert.alert-info
-                div= messages.info
-        if messages.success
-            .alert.alert-success
-                div= messages.success
-        block content
+            include partials/flash
+            block content
+                       
+        include partials/footer
+
+        script(src='/js/lib/jquery-2.2.0.min.js')
+        script(src='/js/lib/bootstrap.min.js')
+        script(src='/js/main.js')
+
+        // Google Analytics: change UA-XXXXX-X to be your site's ID
+        script.
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-XXXXX-X', 'auto');
+            ga('send', 'pageview');
