--- a/views/register.jade
+++ b/views/register.jade
@@ -12,13 +12,13 @@ block content
         input.form-control(type='text', name="username", placeholder='Enter Username', autofocus)
       .form-group
         label(for='email') Email
-        input.form-control(type='text', name="email", placeholder='Email')
+        input.form-control(type='email', name="email", placeholder='Email')
       .form-group
         label(for='password') Password
         input.form-control(type='password', name="password", placeholder='Password') 
       .form-group
-        label(for='confirm') Confirm Password
-        input.form-control(type='password', name="confirm", placeholder='Confirm Password') 
+        label(for='confirmPassword') Confirm Password
+        input.form-control(type='password', name="confirmPassword", placeholder='Confirm Password') 
       button.btn.btn-primary(type='submit') Register
       &nbsp;
       a(href='/')
